--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="discription" 
         content="contact">
     <title>Contactform</title>
-    <link rel="stylesheet" type="text/css" href="mail.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
     <header>
