--- a/mijncv.html
+++ b/mijncv.html
@@ -5,7 +5,7 @@
     <meta name="discription" 
         content="personal">
     <title>Mijn CV</title>
-    <link rel="stylesheet" type="text/css" href="mail.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
     <header>
