--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <h1>Contactformulier</h1>
             <nav>
                 <ul>
-                    <li><a href="">Persoonlijk</a></li>
+                    <li><a href="https://amvede.github.io/H15/">Persoonlijk</a></li>
                     <li><a href="">Mijn CV</a></li>
                     <li><a href="">Neem contact op</a></li>
                 </ul>
