--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="https://amvede.github.io/H15/">Persoonlijk</a></li>
                     <li><a href="">Mijn CV</a></li>
-                    <li><a href="">Neem contact op</a></li>
+                    <li><a href="https://amvede.github.io/H15/contact.html">Neem contact op</a></li>
                 </ul>
             </nav>
     </header>
