--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="https://amvede.github.io/H15/">Persoonlijk</a></li>
-                    <li><a href="">Mijn CV</a></li>
+                    <li><a href="https://amvede.github.io/H15/mijncv.html">Mijn CV</a></li>
                     <li><a href="https://amvede.github.io/H15/contact.html">Neem contact op</a></li>
                 </ul>
             </nav>
