--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
     </header>
     <main>
         <form name="contactform" action="https://formspree.io/f/xdovppqv" method="post"><h3>U kunt onderstaande contactformulier invullen</h3>
-            <input type="text" id="voornaam" placeholder="Voornaam"/>
-            <input type="text" id="achternaam" placeholder="Achternaam"/>
-            <input type="email" id="email" placeholder="E-mailadres"/>
-            <textarea id="info" placeholder="Welke info wilt u delen?"></textarea>
+            <input type="text" id="voornaam" name="voornaam" placeholder="Voornaam"/>
+            <input type="text" id="achternaam" name="achternaam" placeholder="Achternaam"/>
+            <input type="email" id="email" name="email" placeholder="E-mailadres"/>
+            <textarea id="info" name="info" placeholder="Welke info wilt u delen?"></textarea>
             <button>Opsturen</button>
         </form>
     </main>
